--- a/main folder/app/css/app.css
+++ b/main folder/app/css/app.css
@@ -7,7 +7,6 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
 }
 #app {
     display: grid;
@@ -18,8 +17,8 @@ html, body {
     "navbar navbar"
     "sidebar main "
     "sidebar footer";
-    /*background-color: #595959;*/
-    background-image: linear-gradient(to bottom right, #145ac4,#b5b5a8, #ffffed);
+    background-color: #595959;
+    
 } 
 /*alert*/
 #inputAlert {
@@ -30,7 +29,7 @@ html, body {
     width: 21vw;
     transform: translate(-50%, -50%);
     z-index: 9999;
-    background-image: linear-gradient(to bottom right, rgba(0, 0, 196, 0.2), rgba(255, 255, 237, 0.2));
+    background-color: #595959;
     text-align: center;
     justify-content: center;
 }  
@@ -84,13 +83,14 @@ nav {
     height: 5.5em;
     position: sticky;
     grid-area: navbar;
-    /*background-color: #6488EA;*/
+    background-color: #2c3e50;
     /*background-image: linear-gradient(to bottom right, #6488EA,#ffffed);*/
     padding: 1em;
     font-family: "PT Sans", serif;
     font-weight: 400;
     font-style: normal;
-    text-shadow: 0.2em 0.2em rgba(0, 0, 0, 0.09);
+    color: #ffffff;
+    text-shadow: 0.2em 0.2em rgba(0, 0, 0, 0.1);
 }
 nav > h1 {
     margin-left: 50px;
@@ -104,10 +104,6 @@ nav > button {
     width: 32px;
     height: 32px;
     background-color: transparent;
-}
-nav > button > img {
-    width: 24px;
-    height: 24px;
 }
 /*menu*/
 aside{
@@ -136,7 +132,7 @@ aside > div > h1 {
     border: 1px solid lightgray;
 }
 aside > div > button {
-    background-color: lightcyan;
+    background-color: lightgray;
     border: 0;
     border-radius: 5px;
     width: 290px;
@@ -153,7 +149,7 @@ aside > div > button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 #newList {
-    background-color: lightcyan;
+    background-color: lightgray;
     border: 0;
     border-radius: 5px;
     width: 300px;
@@ -163,12 +159,7 @@ aside > div > button:hover {
     display: flex;
     align-items: center;
 }
-#newList > h1 {
-    color: blueviolet;
-}
-#newList:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+
 #routine {
     margin-top: 1vh;
 }
@@ -220,9 +211,17 @@ main > div > button {
 main > div > button > img {
     width: 32px;
     height: 32px;
+    filter: invert(90%);
 }
 #deleteTask {
     margin-left: auto;
+}
+#doneTask:hover img {
+    filter: invert(55%) sepia(100%) saturate(3.5) hue-rotate(45deg);
+}
+  
+#deleteTask:hover img {
+    filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
 }
 /*footer*/
 footer {
@@ -232,6 +231,7 @@ footer {
     display: flex;
     /*background-color: lightgrey;*/
     border-left: 0.2em  solid lightskyblue;
+    border-top: 0.2em  solid lightskyblue ;
     padding: 2em;
     font-family: "PT Sans", serif;
     font-weight: 400;
@@ -242,7 +242,7 @@ footer > input{
     box-sizing: border-box;
     width: 89%;
     height: 5vh;
-    background-color: lightcyan;
+    background-color: lightgray;
     border: 0;
     border-radius: 5px;
     padding: 1em;
@@ -255,7 +255,7 @@ footer > button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background-color: lightcyan;
+    background-color: lightgray;
     width: 10%;
     height: 5vh ;
     border: 0;
